Actuator en service, inetceptor configurer,read-me ajouté et couverture demandé réaliseé